# binance-tools

./: .gitignore  Cargo.toml  README.md
config/: ai.json  setings.json
docs/: README.md
docs/db_table/: README.md  ai_chat_threads.md  ai_provider_keys.md  ai_rules.md  alpha_assets.md  alpha_klines.md  alpha_symbols.md  alpha_tokens.md  binance_market_products_cache.md  binance_square_ai_logs.md  binance_square_ai_settings.md  binance_square_keys.md  binance_square_send_logs.md  binance_square_tasks.md  btcc_wallets.md  spot_klines.md  spot_klines_1d.md  spot_klines_4h.md  spot_symbols.md  tool_board_tasks.md
docs/images/: README.md
docs/安装/: README.md  windows.md
docs/知识库/: README.md  rest-api_CN.md  币安现货API.md
docs/知识库/gpui-component/: 00-导读-安装与入门.md  README.md  llms-full.txt  官方文档链接索引.md
docs/知识库/币安api/: README.md
docs/知识库/币安sdk/: README.md
docs/策略知识/: README.md  回测策略原理与故事.md  常见指标说明.md  技术指标说明与策略用途.md  指标查看工具数据格式与计算方式.md
docs/策略知识/回测策略/: 01-ma-cross.md  02-grid.md  03-trend-grid.md  04-turtle.md  05-martingale.md  06-rsi.md  07-macd.md  10-obv.md  (+6 more)
docs/项目执行/: 01-项目框架.md  02-项目UI.md  03-币安现货.md  04-币安广场.md  05-ai.md  06-ai-market-analysis.md  07-binance-alpha.md  08-工具.md  09-现货回测.md  10-项目工具计算器.md  11-钱包生成.md  README.md
examples/: README.md
examples/desktop-gpui/: Cargo.toml  README.md  build.rs
examples/desktop-gpui/src/: app.rs  main.rs  theme.rs
examples/desktop-gpui/src/ui/: alpha.rs  alpha_heatmap.rs  alpha_ma_signal.rs  backtest.rs  calculator.rs  dashboard.rs  heatmap.rs  kline.rs  ma_signal.rs  market.rs  mod.rs  palette.rs  spot.rs  square.rs  strategy_help.rs  task_board.rs  title_bar.rs  tools.rs
examples/desktop-gpui/src/ui/ai/: chat.rs  mod.rs  providers.rs  rules.rs
examples/desktop-gpui/src/ui/btcc/: mod.rs  wallet_generator.rs  wallet_list.rs  wallet_manager.rs
installer/inno/: binance-tools.iss
src/: backtest.rs  lib.rs  main.rs
src/ai/: mod.rs
src/app/: mod.rs
src/backtest/: bollinger.rs  cci.rs  common.rs  grid.rs  ma_cross.rs  macd.rs  martingale.rs  mod.rs  obv.rs  rsi.rs  stochastic.rs  supertrend.rs  trend_grid.rs  turtle.rs  volume_spike.rs
src/binance/: alpha.rs  market.rs  mod.rs  spot.rs  vision.rs
src/calculator/: mod.rs
src/db/: ai.rs  ai_rules.rs  ai_threads.rs  alpha.rs  btcc_wallet.rs  market.rs  mod.rs  spot.rs  square.rs  task_board.rs
src/square/: mod.rs
src/wallet/: keys.rs  mod.rs  pbe.rs  tx.rs
(+13 files in other folders)
