[package]
name = "binance_tools"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["examples/desktop-gpui"]
default-members = ["."]
resolver = "3"

[dependencies]
anyhow = "1.0"
binance-sdk = { version = "48.0.1", default-features = false, features = ["spot", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots", "system-proxy"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33", features = ["rt", "time"] }
